Bug 335649 - Brush outline should disappear when moving the cursor out of the canvas viewport
Summary: Brush outline should disappear when moving the cursor out of the canvas viewport
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-01 15:18 UTC by Alicia Boya García (ntrrgc)
Modified: 2014-06-06 16:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (135.03 KB, image/png)
2014-06-01 15:18 UTC, Alicia Boya García (ntrrgc)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alicia Boya García (ntrrgc) 2014-06-01 15:18:09 UTC
Currently when you move the cursor out of the canvas viewport the outline is not removed, so you get the feeling that there are two cursors, the one in the canvas and the one outside.

I think when you move the cursor outside of the viewport the outline should disappear, in the same way the crosshair disappears too (if enabled).

Reproducible: Always

Steps to Reproduce:
1. Place the cursor in the canvas
2. Move it outside, e.g. to select another layer
Actual Results:  
The brush outline is visible

Expected Results:  
The brush outline should be hidden
Comment 1 Alicia Boya García (ntrrgc) 2014-06-01 15:18:43 UTC
Created attachment 86943 [details]
Screenshot
Comment 2 Dmitry Kazakov 2014-06-06 04:42:04 UTC
Yes, this is a small bug
Comment 3 Dmitry Kazakov 2014-06-06 08:17:10 UTC
Git commit 6eedc10af62fb369ddaee6c893e8fbfb8a15e6a5 by Dmitry Kazakov.
Committed on 06/06/2014 at 08:13.
Pushed by dkazakov into branch 'krita-testing-kazakov'.

Fix hiding the brush outline when the cursor is outside the canvas

Please check this patch on Gnome and Windows!
CCMAIL:kimageshop@kde.org

M  +4    -0    krita/ui/input/kis_input_manager.cpp
M  +29   -3    krita/ui/input/kis_shortcut_matcher.cpp
M  +12   -0    krita/ui/input/kis_shortcut_matcher.h

http://commits.kde.org/calligra/6eedc10af62fb369ddaee6c893e8fbfb8a15e6a5
Comment 4 Dmitry Kazakov 2014-06-06 08:19:08 UTC
Git commit b53adfca36dfedd0cad37f42a3021be33a24892f by Dmitry Kazakov.
Committed on 06/06/2014 at 08:18.
Pushed by dkazakov into branch 'master'.

Fix hiding the brush outline when the cursor is outside the canvas

Please check this patch on Gnome and Windows!
CCMAIL:kimageshop@kde.org

Conflicts:

	krita/ui/input/kis_input_manager.cpp

M  +4    -0    krita/ui/input/kis_input_manager.cpp
M  +29   -3    krita/ui/input/kis_shortcut_matcher.cpp
M  +12   -0    krita/ui/input/kis_shortcut_matcher.h

http://commits.kde.org/calligra/b53adfca36dfedd0cad37f42a3021be33a24892f
Comment 5 Alicia Boya García (ntrrgc) 2014-06-06 16:46:57 UTC
At least in KDE it works fine now, thanks. :)