Fix hiding the brush outline when the cursor is outside the canvas

Please check this patch on Gnome and Windows!

BUG:335649
CCMAIL:kimageshop@kde.org